-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.1.0-beta
-
None
-
e51e98e256570ce33bc76931fb31c389bcb79bce in qtdeclarative
There used to be some of those reported for the welcome screen. No longer ...
For Gerrit Dashboard: QTCREATORBUG-11536 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
78971,1 | Register the QML profiler's animation callback from the GUI thread | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |