Register the QML profiler's animation callback from the GUI thread

QUnifiedTimer is thread-local, so that a different object is returned
from instance() for each thread. This patch makes sure we register to
the one that performs the animations.

Task-number: QTCREATORBUG-11536
Change-Id: I23c3ff49f94668517b9894298a4d770a8c30e705
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>